# FRC-robot-data-display-website

./: .env  .gitignore  BackendAPISupportLists.md  README.md  Run.bash  next.config.mjs  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
ReTranslator/: .env  Cargo.toml
ReTranslator/src/: main.rs
backend/: Cargo.toml  middle_storage.db
backend/.cargo/: config.toml
backend/src/: database.rs  main.rs  network_table_bridge.rs  server.rs
backend/src/database/: structs.rs
backend/src/database/structs/: table_entree.rs
backend/src/server/: api.rs
backend/src/server/api/: database.rs
backend/src/server/api/database/: clean_whole_db.rs  clear_database.rs  codes.rs  data_struct.rs  get_entree.rs  get_entries.rs  get_entry.rs  get_entry_and_clean.rs  route.rs  test_util.rs
bash/: RunMac.bash  RunWindows.bat
db/: database.db
docs/: BackendAPISupportLists.md  CONTRIBUTING.md  ConfigDocs.md  Methodology.md
src/: instrumentation.ts
src/app/: page.tsx
src/app/api/init/: action.ts  route.ts
src/app/components/: MotorOutputChart.tsx
src/internal/: app.ts
src/internal/database/: DatabaseBridge.ts
src/internal/nw-table/: NetworkTables.ts
src/websocket/: index.ts
src/websocket/Example/: ExampleRoute.ts
