[package]
name = "message-receiver-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
network-tables = { features = ["client-v4", "client-v3"], version = "*"}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
rocket = {version = "*", features = ["json"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
colored = "2.1.0"
serial_test = "0.5"